--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
         <ul class="navbar-nav mr-auto">
           <ng-container *ngIf="accountService.currentUser$ | async">
             <li class="nav-item">
-              <a class="nav-link" routerLink='/members' routerLinkActive='active'>Matches</a>
+              <a class="nav-link" routerLink='/members' routerLinkActive='active'>Members</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink='/lists' routerLinkActive='active'>Lists</a>
@@ -21,7 +21,7 @@
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
           <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
-            <a class="dropdown-item">Edit Profile</a>
+            <a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" (click)="logout()">Logout</a>
           </div>
