Added Interest For User both client and api

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -37,6 +37,8 @@
             <tab heading="Aboout {{member.knownAs}}">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
+                <h4>Interest</h4>
+                <p>{{member.interest}}</p>
             </tab>
             <tab heading="Blogs">
                 <h4>Blogs are comming soon...</h4>
