--- a/client/src/app/members/membner-edit/membner-edit.component.html
+++ b/client/src/app/members/membner-edit/membner-edit.component.html
@@ -55,7 +55,7 @@
                 </form>
             </tab>
             <tab heading="Edit Photos">
-                <h4>Photos Edit are comming soon...</h4>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
