--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -17,6 +17,6 @@
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr2"></i>
             {{member.knownAs}}
         </h6>
-        <p class="card-next text-muted text-center">{{member.city}}</p>
+        <p class="card-next text-muted text-center">{{member.batch}}</p>
     </div>
 </div>
