--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div *ngIf="!registerMode" style='text-align: center;'>
-        <h1>Find Your match</h1>
-        <p class="lead">Come on in to view your matches... all you need to do is sign up!!</p>
+        <h1>Get Connected With The Student/Alumni</h1>
+        <p class="lead">All you need to do is sign up!!</p>
         <div class="text-center">
             <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
             <button class="btn btn-info btn-lg">Learn more</button>
