nav Color change

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -26,7 +26,7 @@
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
-                    <button class="btn btn-primary">Like</button>
+                    <button class="btn btn-dark">Like</button>
                     <button class="btn btn-success">Message</button>
                 </div>
             </div>
@@ -34,7 +34,7 @@
     </div>
     <div class="col-8">
         <tabset class="member-tabset">
-            <tab heading="Aboout {{member.knownAs}}">
+            <tab heading="About {{member.knownAs}}">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Interest</h4>
