--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -7,3 +7,7 @@ img {
     border: 2px solid #fff;
     display: inline;
 }
+
+.dropdown-item.active, .dropdown-item:active {
+    background-color: #772953 !important;
+}
