--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive | date:'medium'}}</p>
                 </div>
             </div>
             <div class="card-footer">
@@ -41,7 +41,14 @@
                 <p>{{member.interest}}</p>
             </tab>
             <tab heading="Blogs">
-                <h4>Blogs are comming soon...</h4>
+                <div *ngFor="let blog of blogs" class="post-preview">
+                        <h2 class="post-title">{{blog.title}}</h2>
+                    <p class="post-meta">
+                        Posted on {{blog.blogCreated | date:'medium'}}
+                    </p>
+                    <div [innerHTML]="blog.description"></div>
+                    <hr class="my-4">
+                </div>
             </tab>
             <tab heading="Photos">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
