--- a/client/src/app/members/membner-edit/membner-edit.component.html
+++ b/client/src/app/members/membner-edit/membner-edit.component.html
@@ -29,7 +29,7 @@
                 </div>
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastActive | date:'medium'}}</p>
                 </div>
             </div>
             <div class="card-footer">
@@ -39,7 +39,7 @@
     </div>
     <div class="col-8">
         <tabset class="member-tabset">
-            <tab heading="Aboout {{member.knownAs}}">
+            <tab heading="About {{member.knownAs}}">
                 <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                     <h4>Description</h4>
                     <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
@@ -56,6 +56,15 @@
             </tab>
             <tab heading="Edit Photos">
                 <app-photo-editor [member]="member"></app-photo-editor>
+            </tab>
+            <tab heading="Add Blogs">
+                <form [formGroup]="blogForm" (ngSubmit)="addBlog()">
+                    <h4 class="mx-2">Title</h4>
+                    <input type="text" formControlName="title" id="title" class="form-control mx-2">
+                    <h4 class="mx-2 mt-2">Blog Description</h4>
+                    <angular-editor class="form-control mx-2" formControlName="description" [config]="config"></angular-editor>
+                    <button type="submit" class="btn btn-success btn-block mx-2 mt-2">Post Blog</button>
+                </form>
             </tab>
         </tabset>
     </div>
