--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,5 +4,8 @@
     border: 0;
     border-top: 1px solid #eee;
     padding: 15px;
+    height: calc(100vh - 200px);
+    overflow-y: auto;
+    overflow-x: hidden;
   }
   
