FIxing Alumni Status in in Registration

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,8 +3,8 @@
         <h1>Get Connected With The Student/Alumni</h1>
         <p class="lead">All you need to do is sign up!!</p>
         <div class="text-center">
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
-            <button class="btn btn-info btn-lg">Learn more</button>
+            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Sign Up</button>
+            <button class="btn btn-info btn-lg" *ngIf="false">Learn more</button>
         </div>
     </div>
 
