--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -5,7 +5,7 @@
             <li class="list-inline-item"><button routerLink='/members/{{member.username}}' class="btn btn-dark">
                 <i class="fa fa-user"></i></button>        
             </li>
-            <li class="list-inline-item"><button class="btn btn-dark">
+            <li class="list-inline-item" *ngIf="false"><button class="btn btn-dark">
                 <i class="fa fa-heart"></i></button>        
             </li>
             <li class="list-inline-item"><button class="btn btn-dark">
