--- a/client/src/app/members/member-detail/member-detail.component.css
+++ b/client/src/app/members/member-detail/member-detail.component.css
@@ -24,3 +24,9 @@
     margin-top: 0;
     color: #6c757d;
 }
+.alumniSticker
+{
+    background-color: thistle;
+    text-align: center;
+    text-decoration: white;
+}
