--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -44,7 +44,7 @@
         </ul>
     </div>
     <div class="form-group text-center mt-3">
-        <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Register</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success mr-2" type="submit">Sign Up</button>
         <button class="btn btn-default mr-2" (click)="cancel()" type="submit">Cancel</button>
     </div>
 </form>
