Removing unused usings and imports.

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -23,8 +23,8 @@
                     <p>{{member.age}}</p>
                 </div>
                 <div>
-                    <strong>Last Active:</strong>
-                    <p>{{member.lastActive | date:'medium'}}</p>
+                    <strong>Student Id:</strong>
+                    <p>{{member.studentId}}</p>
                 </div>
             </div>
             <div class="card-footer">
