--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -8,4 +8,8 @@
     overflow-y: auto;
     overflow-x: hidden;
   }
-  
+  .alumniSticker{
+    background-color: thistle;
+    text-align: center;
+    text-decoration: white;
+}
