--- a/client/src/app/members/membner-edit/membner-edit.component.html
+++ b/client/src/app/members/membner-edit/membner-edit.component.html
@@ -34,6 +34,14 @@
                     <strong>Student Id:</strong>
                     <p>{{member.studentId}}</p>
                 </div>
+                <div>
+                    <strong>Last Active:</strong>
+                    <p>{{member.lastActive | timeago}}</p>
+                </div>
+                <div>
+                    <strong>Member Since:</strong>
+                    <p>{{member.created | date: 'longDate'}}</p>
+                </div>
             </div>
             <div class="card-footer">
                 <button [disabled]="!editForm.dirty" type="submit" form="editForm" class="btn btn-success btn-block">Save Changes</button>
