--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"><i class="fa fa-user mr2"></i>
-            {{member.knownAs}}
+            {{member.knownAs}}, {{member.age}}
         </h6>
         <p class="card-next text-muted text-center">{{member.batch}}</p>
     </div>
