--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row">
     <div class="col-4">
         <div class="card">
             <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" class="card-img-top img-thumbnail">
@@ -38,21 +38,21 @@
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
-                    <button class="btn btn-dark" *ngIf="false">Like</button>
-                    <button class="btn btn-success">Message</button>
+                    <button class="btn btn-dark">Like</button>
+                    <button (click)="selectTab(3)" class="btn btn-success">Message</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading="About {{member.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)">
                 <h4>Description</h4>
                 <p>{{member.introduction}}</p>
                 <h4>Interest</h4>
                 <p>{{member.interest}}</p>
             </tab>
-            <tab heading="Blogs">
+            <tab heading="Blogs" (selectTab)="onTabActivated($event)">
                 <div *ngFor="let blog of blogs" class="post-preview">
                         <h2 class="post-title">{{blog.title}}</h2>
                     <p class="post-meta">
@@ -62,11 +62,11 @@
                     <hr class="my-4">
                 </div>
             </tab>
-            <tab heading="Photos">
+            <tab heading="Photos" (selectTab)="onTabActivated($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
-            <tab heading="Messages">
-                <h4>Message are comming soon...</h4>
+            <tab heading="Messages" (selectTab)="onTabActivated($event)">
+                <app-member-messages [messages]="messages" [username]="member.username"></app-member-messages>
             </tab>
         </tabset>
     </div>
