--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -6,14 +6,17 @@
             <li class="nav-item">
               <a class="nav-link" routerLink='/members' routerLinkActive='active'>Members</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *appHasRole='["Member"]'>
               <a class="nav-link" routerLink='/lists' routerLinkActive='active'>List</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *appHasRole='["Member"]'>
               <a class="nav-link" routerLink='/batchMates' routerLinkActive='active'>Batch Mates</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" *appHasRole='["Member"]'>
               <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
+            </li>
+            <li *appHasRole='["Admin","Moderator"]' class="nav-item">
+              <a class="nav-link" routerLink='/admin' routerLinkActive='active'>Admin</a>
             </li>
           </ng-container>
           <li class="nav-item">
@@ -23,7 +26,7 @@
 
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
           <img src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.username}}">
-          <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.knownAs | titlecase}}</a>
+          <a class="dropdown-toggle text-light ml-2" dropdownToggle>Welcome {{user.knownAs || user.username || titlecase}}</a>
           <div class="dropdown-menu mt-3" *dropdownMenu>
             <a class="dropdown-item" routerLink='/member/edit'>Edit Profile</a>
             <div class="dropdown-divider"></div>
